# All4Laser

./: .gitignore  Cargo.toml  LaserGRBL.code-workspace  README.md  TASKS.md  TODO.md  build-dual.bat  build.rs  errors.txt  patch.diff  patch2.diff  patch3.diff  plan.md  task.md
.cargo/: config.toml
.github/workflows/: release-dual.yml  release.yml  rust-clippy.yml  rust.yml
assets/: all4laser.desktop
assets/fonts/: README.md
aur/: .SRCINFO  PKGBUILD  README.md
aur-bin/: .SRCINFO  PKGBUILD
docs/: laser_pipeline_architecture.md
icons/: icon.icns
scripts/: build-dual.ps1
src/: app.rs  app_types.rs  camera_stream.rs  i18n.rs  main.rs  test_fonts.rs  theme.rs  updater.rs
src/ai/: llm_provider.rs  mod.rs  prompt_parser.rs  scene_composer.rs  shape_library.rs  svg_path_parser.rs
src/config/: event_log.rs  machine_profile.rs  mod.rs  project.rs  recent_files.rs  settings.rs
src/controller/: mod.rs
src/gcode/: estimation.rs  file.rs  fill.rs  generator.rs  lbrn_import.rs  mod.rs  optimizer.rs  output_protocol.rs  parser.rs  path_utils.rs  transform.rs  types.rs  xcs_import.rs
src/grbl/: mod.rs  parser.rs  protocol.rs  types.rs
src/i18n/: ar.rs  de.rs  es.rs  fr.rs  it.rs  ja.rs  ko.rs  mod.rs  pl.rs  pt.rs  ru.rs  tr.rs  tr_lang.rs  zh.rs
src/imaging/: camera_vision.rs  dxf.rs  hpgl.rs  mod.rs  pdf.rs  raster.rs  raster.rs.patch  ruida_rd.rs  svg.rs  svg_filters.rs  tracing.rs
src/laser/: driver.rs  job.rs  mod.rs  pipeline.rs
src/laser/driver/: dummy.rs  epilog.rs  fullspectrum.rs  grbl.rs  hpgl.rs  imodela.rs  k3.rs  k40.rs  laos.rs  lasersaur.rs  lasertools.rs  makeblock.rs  marlin.rs  ruida.rs  sample.rs  smoothie.rs  trocen.rs
src/preview/: renderer.rs
src/serial/: connection.rs
src/ui/: alignment.rs  boolean_ops.rs  camera.rs  circular_array.rs  connection.rs  console.rs  cut_list.rs  cut_palette.rs  cut_settings.rs  drawing.rs  gcode_editor.rs  generators.rs  grid_array.rs  image_dialog.rs  job_queue.rs  jog.rs  layers.rs  layers_new.rs  machine_state.rs  macros.rs  marker_detect.rs  materials.rs  mod.rs  nesting.rs  node_edit.rs  offset.rs  power_speed_test.rs  preferences.rs  preflight.rs  preview_panel.rs  settings_dialog.rs  shortcuts.rs  sound.rs  status_bar.rs  text.rs  tiling.rs  toolbar.rs  vector_edit.rs  wizard.rs
test_files/: 14334-NPQ2FE.ai  14334-NPQ2FG.eps  7x Bookmarks Floral.xcs  Easter Bunny Basket Ornament.xcs  GL-C-F.plt  GL-C-O.plt  Ocean_Ornament_5.xcs  Wooden christian standing cross 2.xcs  boucles_arbre_de_vie.xcs
