[package]
name = "all4laser"
version = "0.1.0"
edition = "2024"
description = "All4Laser — Open-source laser engraver controller"
license = "GPL-3.0"

[dependencies]
eframe = { version = "0.34", features = ["default"] }
egui = "0.34"
egui_extras = { version = "0.34", features = ["image"] }
serialport = "4"
image = "0.25"
rfd = "0.17"
log = "0.4"
env_logger = "0.11"
crossbeam-channel = "0.5"
usvg = "0.47"
tiny-skia = "0.12"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
rusttype = "0.9"
qrcode = "0.14"
font-kit = "0.14"
geo = "0.32"
indexmap = "2.13.0"
ureq = { version = "3.3", features = ["json"] }
webbrowser = "1.2"
lopdf = "0.40"
base64 = "0.22"

[target.'cfg(target_os = "linux")'.dependencies]
v4l = "0.14"

[target.'cfg(target_os = "windows")'.dependencies]
nokhwa = { version = "0.10", features = ["input-msmf", "output-threaded"] }

[profile.release]
opt-level = 3
lto = true
strip = true

[[test]]
name = "test_fonts"
path = "src/test_fonts.rs"

[build-dependencies]
winres = "0.1"

[package.metadata.packager]
formats = ["deb", "appimage", "nsis", "dmg"]
icons = ["icons/icon.png", "icons/icon.ico", "icons/icon.icns"]
